fix map container on safari mobile

--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -220,19 +220,11 @@
   object-fit: cover;
   z-index: 1;
 }
-@media screen and (width<450px) {
-  .store-locations-container{
-    display: flex;
-    width: 100%;
-    gap: 15px;
-  }
-}
-@media screen and (width>=451px) {
-  .store-locations-container{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 15px;
-  }
+.store-locations-container{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 15px;
+  width: 100%;
 }
 .store-locations-container *{
   width: 100%;
